option java_package = "com.hawk.game.protocol";

// struct-------------------------------------------------------

message HSSkill
{
	required int32 skillId = 1;
	required int32 level = 2;
}

// protocol-----------------------------------------------------
