option java_package = "com.hawk.game.protocol";

// DATA_WRAPPER
message HSDataWarpper
{
	optional bytes data = 1;
}

// KEY_EXCHANGE
message HSKeyExchange
{
	optional bytes keys = 1;
}

// HEART_BEAT
message HSHeartBeat
{
	optional int32 timeStamp = 1;
	optional bytes data = 2;
}

// ERROR_CODE
message HSErrorCode
{
	required int32  hsCode = 1;	
	required int32  errCode = 2;
	optional string errMsg = 3;
	optional int32  errFlag = 4 [default = 0];
}
